--- a/index.html
+++ b/index.html
@@ -9,18 +9,23 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <!--
+    <header id="header" >
+      <img src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt=" trombones logo" id="header-img">
+      <nav id="nav-bar">
+        <a href="#features" class="nav-link">Features</a>
+        <a href="#video" class="nav-link">How it works</a>
+        <a href="#products" class="nav-link">Pricing</a>
+      </nav>
+      <iframe width="560" height="315" src="https://www.youtube.com/" frameborder="0" id="video"></iframe>
+      <form id="form" >
+        <input type="email" name="email" placeholder="enter your email" id="email" required></input>
+        <input type="submit" id="submit" value="Get Started" class="btn">
+      </form>
+      <article id="features"></article>
+      <article id="video"></article>
+      <article id="products"></article>
 
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
+    </header>
     <script  src="js/index.js"></script>
   </body>
 </html>
