--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
         <a href="#products" class="nav-link">Pricing</a>
       </nav>
       <iframe width="560" height="315" src="https://www.youtube.com/" frameborder="0" id="video"></iframe>
-      <form id="form" >
+      <form id="form" action=" https://www.freecodecamp.com/email-submit">
         <input type="email" name="email" placeholder="enter your email" id="email" required></input>
         <input type="submit" id="submit" value="Get Started" class="btn">
       </form>
       <article id="features"></article>
       <article id="video"></article>
       <article id="products"></article>
+
+    
 
     </header>
     <script  src="js/index.js"></script>
